# packagekit

./: CMakeLists.txt  config.h.cmake  configure.ac  project.config
backends/: CMakeLists.txt  Makefile.am
backends/apt/: pk-backend-apt.c
backends/aptcc/: AptCacheFile.cpp  AptCacheFile.h  CMakeLists.txt  OpPackageKitProgress.cpp  acqpkitstatus.cpp  acqpkitstatus.h  apt-intf.cpp  apt-intf.h  apt-messages.cpp  pk-backend-aptcc.cpp
backends/click/: Makefile.am  clickBackend.py  pk-backend-click.c
backends/conary/: pk-backend-conary.c
backends/dummy/: CMakeLists.txt  pk-backend-dummy.c
backends/entropy/: pk-backend-entropy.c
backends/pisi/: pk-backend-pisi.c
backends/portage/: pk-backend-portage.c
backends/ports/: pk-backend-ports.c
backends/smart/: pk-backend-smart.c
backends/test/: pk-backend-test-spawn.c
backends/urpmi/: pk-backend-urpmi.c
backends/yum/: pk-backend-yum.c
backends/zif/: pk-backend-zif.c
backends/zypp/: pk-backend-zypp.cpp
cmake/modules/: PkgConfigDBusBinding.cmake  PkgConfigGlibGenMarchal.cmake
lib/: CMakeLists.txt
lib/packagekit-glib2/: CMakeLists.txt
lib/packagekit-qt2/: transaction.h
lib/python/packagekit/: backend.py
src/: CMakeLists.txt  Makefile.am  gdb.sh  pk-backend-job.c  pk-backend-job.h  pk-backend-spawn.c  pk-backend.c  pk-backend.h  pk-engine.c  pk-self-test.c  pk-spawn.c  pk-time.c  pk-transaction-db.c  pk-transaction-list.c  pk-transaction-list.h  pk-transaction.c  pk-transaction.h  run-pk.sh
src/plugins/: pk-plugin-check-shared-libraries-in-use.c  pk-plugin-no-update-process.c  pk-plugin-scan-desktop-files.c  pk-plugin-update-check-processes.c  pk-plugin-update-package-cache.c
